--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Bruno Gurgatz"
   pronouns         : # example: "she/her"  
-  bio              : "Pesquisador - química ambiental - monitoramento ambiental portuário - mudanças climáticas - unidades de conservação"
+  bio              : "Pesquisador - Poluição Atmosférica - Mudanças Climáticas - Conservação"
   location         : "Litoral do Paraná"
   employer         : "Laboratório de Geoprocessamento e Estudos Ambientais - LAGEAMB UFPR"
   uri              : # URL
