--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@
 
 # Basic Site Settings
 locale                   : "pt-BR"
-title                    : "Bruno Gurgatz - Ciência Ambiental"
+title                    : "Bruno Gurgatz"
 title_separator          : "-"
 name                     : "Bruno Gurgatz"
-description              : "Ciência Ambiental"
+description              : "Fotografando o Antropoceno"
 url                      : https://brunogurgatz.github.io
 baseurl                  : "" # deixei em branco já que você não mencionou um subcaminho específico
 repository               : "academicpages/academicpages.github.io"
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Pesquisador - Poluição Atmosférica - Mudanças Climáticas - Conservação"
   location         : "Litoral do Paraná"
-  employer         : "Laboratório de Geoprocessamento e Estudos Ambientais - LAGEAMB UFPR"
+  employer         : "[LAGEAMB UFPR](https://lageamb.ufpr.br/)"
   uri              : # URL
   email            : "brunogurgatz@gmail.com" 
 
