--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "Bruno Gurgatz"
   pronouns         : # example: "she/her"  
-  bio              : "Poluição Atmosférica e Estuarina - Mudanças Climáticas - Conservação"
+  bio              : "Ciências ambientais"
   location         : "Litoral do Paraná"
-  employer         : "LAGEAMB UFPR"
+  employer         : "LAGEAMB/ UFPR"
   uri              : # URL
   email            : "brunogurgatz@gmail.com" 
 
