--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Bruno Gurgatz"
   pronouns         : # example: "she/her"  
-  bio              : "Ciências ambientais"
+  bio              : "Entre geoquímica e a luta de classes"
   location         : "Litoral do Paraná"
   employer         : "LAGEAMB/ UFPR"
   uri              : # URL
