--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "pt-BR"
-title                    : " "
+title                    : "Bruno Gurgatz"
 title_separator          : "-"
 name                     : "Bruno Gurgatz"
 description              : "Pesquisador - Ciências Ambientais"
