--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Bruno Martins Gurgatz"
   pronouns         : ""  
-  bio              : "Entre geoquímica e a luta de classes"
+  bio              : "Entre a geoquímica e a luta de classes"
   employer         : "LAGEAMB/ UFPR"
   location         : "Litoral do Paraná"
   uri              : ""# URL
