--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
   - title: "Publicações"
     url: /publications/
      
-  - title: "Anotações insustentáveis"
+  - title: "LOG"
     url: /year-archive/
     
   - title: "CV"
